--- a/Models.ipynb
+++ b/Models.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 1,
       "metadata": {
         "id": "3h6zBB6DKdIw"
       },
@@ -39,12 +39,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 523
+          "height": 503
         },
         "id": "k8UDRPOjKkh3",
-        "outputId": "dc1778d5-a621-4226-f31e-51b1ee50402b"
+        "outputId": "eb29e9d9-2204-49fb-808f-21278cccdca4"
       },
-      "execution_count": 73,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f2ef0b84-fe5a-4237-a4e0-8093b7bbe305\">\n",
+              "  <div id=\"df-d793595a-4604-4de0-a82a-666743eac3d4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -431,7 +431,7 @@
               "</table>\n",
               "<p>569 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f2ef0b84-fe5a-4237-a4e0-8093b7bbe305')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d793595a-4604-4de0-a82a-666743eac3d4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -482,12 +482,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f2ef0b84-fe5a-4237-a4e0-8093b7bbe305 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d793595a-4604-4de0-a82a-666743eac3d4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f2ef0b84-fe5a-4237-a4e0-8093b7bbe305');\n",
+              "          const element = document.querySelector('#df-d793595a-4604-4de0-a82a-666743eac3d4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -510,19 +510,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "train, test = train_test_split(data)"
+        "train, test = train_test_split(data, random_state=47)"
       ],
       "metadata": {
         "id": "RAuHEoSvNhAM"
       },
-      "execution_count": 74,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -534,7 +534,7 @@
       "metadata": {
         "id": "BfB1_qDQPPSz"
       },
-      "execution_count": 75,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -546,7 +546,7 @@
       "metadata": {
         "id": "JKcktFESPb_C"
       },
-      "execution_count": 76,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -571,13 +571,13 @@
       "metadata": {
         "id": "7pLRcFFtO_Hl"
       },
-      "execution_count": 77,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Klasyfikacja procesów gaussowskich"
+        "Klasyfikacja procesem gaussowskim"
       ],
       "metadata": {
         "id": "R9lTExiLQcUv"
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "9QleuAvqMUB5"
       },
-      "execution_count": 78,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -622,7 +622,7 @@
       "metadata": {
         "id": "aCEbBhf-QMSs"
       },
-      "execution_count": 79,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -637,10 +637,8 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.pipeline import make_pipeline\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.svm import SVC\n",
-        "classifier = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
+        "classifier = SVC(gamma='auto')\n",
         "classifier.fit(train_features, train_target)\n",
         "classifier.predict(test_features)\n",
         "pickle.dump(classifier, open(type(classifier).__name__, 'wb'))"
@@ -648,7 +646,7 @@
       "metadata": {
         "id": "ZclfKsvfRImw"
       },
-      "execution_count": 80,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -673,7 +671,7 @@
       "metadata": {
         "id": "HJtokjEJR5a_"
       },
-      "execution_count": 81,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -697,7 +695,7 @@
       "metadata": {
         "id": "dk7RXz9TSvcX"
       },
-      "execution_count": 82,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -721,7 +719,7 @@
       "metadata": {
         "id": "yVTWxk-mS04t"
       },
-      "execution_count": 83,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -745,7 +743,7 @@
       "metadata": {
         "id": "osysU8Y1S4Dk"
       },
-      "execution_count": 84,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -769,7 +767,7 @@
       "metadata": {
         "id": "ddM-MyfxS75C"
       },
-      "execution_count": 85,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -793,7 +791,7 @@
       "metadata": {
         "id": "jIip6xGBS_LV"
       },
-      "execution_count": 86,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -817,7 +815,7 @@
       "metadata": {
         "id": "BBaoaiP3TBve"
       },
-      "execution_count": 87,
+      "execution_count": 16,
       "outputs": []
     }
   ]
