--- a/Models.ipynb
+++ b/Models.ipynb
@@ -437,7 +437,7 @@
       },
       "outputs": [],
       "source": [
-        "train, test = train_test_split(data, random_state=47)"
+        "train, test = train_test_split(data, random_state=47, test_size=0.4)"
       ]
     },
     {
